cmake_minimum_required(VERSION 2.8)
project( cvLab )
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake-modules)
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( cvLab cvLab.cpp )
target_link_libraries( cvLab ${OpenCV_LIBS} )
